docs(studio): improve providers

--- a/docs/content/docs/9.studio/4.auth-providers.md
+++ b/docs/content/docs/9.studio/4.auth-providers.md
@@ -16,12 +16,12 @@ Auth providers are different from [Git providers](/docs/studio/git-providers). A
 
 ## Provider Comparison
 
-| Feature                | GitHub OAuth                 | GitLab OAuth                  | Google OAuth              | Custom Auth          |
-| ---------------------- | ---------------------------- | ----------------------------- | ------------------------- | -------------------- |
-| **Authentication**     | ✅                            | ✅                             | ✅                         | ✅                    |
-| **Git Operations**     | ✅ Automatic (OAuth token)    | ✅ Automatic (OAuth token)     | ⚠️ Requires PAT            | ⚠️ Requires PAT        |
-| **Access Control**     | ✅ OAuth scope                | ✅ OAuth scope                 | ⚠️ Moderator whitelist     | ⚠️ Custom logic        |
-| **Secured Auth Flow**  | ✅ Provider-managed           | ✅ Provider-managed            | ✅ Provider-managed        | ⚠️ Self-managed        |
+| Feature               | GitHub OAuth              | GitLab OAuth              | Google OAuth          | Custom Auth    |
+| --------------------- | ------------------------- | ------------------------- | --------------------- | -------------- |
+| **Authentication**    | ✅                         | ✅                         | ✅                     | ✅              |
+| **Git Operations**    | ✅ Automatic (OAuth token) | ✅ Automatic (OAuth token) | ⚠ Requires PAT        | ⚠ Requires PAT |
+| **Access Control**    | ✅ OAuth scope             | ✅ OAuth scope             | ⚠ Moderator whitelist | ⚠ Custom logic |
+| **Secured Auth Flow** | ✅ Provider-managed        | ✅ Provider-managed        | ✅ Provider-managed    | ⚠ Self-managed |
 
 ::note
 You can use multiple providers simultaneously. For example, use GitHub OAuth for developers and Google OAuth for non-technical content editors.
@@ -285,12 +285,12 @@ The moderator list is a comma-separated list of email addresses. Only users with
 
 #### Behavior by Provider
 
-| Provider        | Moderator List | Behavior                                                    |
-| --------------- | -------------- | ----------------------------------------------------------- |
-| GitHub OAuth    | Optional       | If empty, all OAuth-authenticated users have access         |
-| GitLab OAuth    | Optional       | If empty, all OAuth-authenticated users have access         |
-| Google OAuth    | **Required**   | Without moderators, no one can access Studio                |
-| Custom Auth     | N/A            | Implement your own access control logic                     |
+| Provider     | Moderator List | Behavior                                            |
+| ------------ | -------------- | --------------------------------------------------- |
+| GitHub OAuth | Optional       | If empty, all OAuth-authenticated users have access |
+| GitLab OAuth | Optional       | If empty, all OAuth-authenticated users have access |
+| Google OAuth | **Required**   | Without moderators, no one can access Studio        |
+| Custom Auth  | N/A            | Implement your own access control logic             |
 
 ::note
 For GitHub and GitLab OAuth, repository write access is still controlled by OAuth scopes, preventing unauthorized users from pushing changes even if they can access Studio.
