--- a/docs/content/docs/9.studio/3.git-providers.md
+++ b/docs/content/docs/9.studio/3.git-providers.md
@@ -14,6 +14,40 @@ Git providers handle the synchronization between Studio and your repository. The
 Git providers are distinct from **Auth providers**. Git providers determine where your repository is hosted and enable you to publish content changes, while Auth providers control how users authenticate and gain access to Studio.
 ::
 
+## Publication Requirements
+
+To publish content changes to your repository, Studio needs a valid access token with write permissions. The token can come from two sources:
+
+### OAuth-based Access (Automatic)
+
+When using **GitHub OAuth** or **GitLab OAuth** as your [Auth provider](/docs/studio/auth-providers), the OAuth token obtained during authentication is automatically used for Git operations. No additional configuration is needed.
+
+```bash [.env]
+# GitHub OAuth - token is obtained automatically during login
+STUDIO_GITHUB_CLIENT_ID=<your_github_client_id>
+STUDIO_GITHUB_CLIENT_SECRET=<your_github_client_secret>
+
+# Or GitLab OAuth - token is obtained automatically during login
+STUDIO_GITLAB_APPLICATION_ID=<your_gitlab_application_id>
+STUDIO_GITLAB_CLIENT_SECRET=<your_gitlab_secret>
+```
+
+### Personal Access Token (Manual)
+
+When using **Google OAuth** or **Custom Auth** as your Auth provider, you must provide a Personal Access Token (PAT) with repository write permissions:
+
+```bash [.env]
+# For GitHub repositories
+STUDIO_GITHUB_TOKEN=<your_github_personal_access_token>
+
+# For GitLab repositories
+STUDIO_GITLAB_TOKEN=<your_gitlab_personal_access_token>
+```
+
+::tip
+Check the section below to have more info about how to create a PAT for GitHub or GitLab provider.
+::
+
 ## Supported Providers
 
 Studio supports two Git providers for repository operations: GitHub and GitLab.
@@ -106,40 +140,6 @@ Add the token to your deployment platform's environment variables:
 ```bash [.env]
 STUDIO_GITLAB_TOKEN=<your_gitlab_personal_access_token>
 ```
-::
-
-## Publication Requirements
-
-To publish content changes to your repository, Studio needs a valid access token with write permissions. The token can come from two sources:
-
-### OAuth-based Access (Automatic)
-
-When using **GitHub OAuth** or **GitLab OAuth** as your [Auth provider](/docs/studio/auth-providers), the OAuth token obtained during authentication is automatically used for Git operations. No additional configuration is needed.
-
-```bash [.env]
-# GitHub OAuth - token is obtained automatically during login
-STUDIO_GITHUB_CLIENT_ID=<your_github_client_id>
-STUDIO_GITHUB_CLIENT_SECRET=<your_github_client_secret>
-
-# Or GitLab OAuth - token is obtained automatically during login
-STUDIO_GITLAB_APPLICATION_ID=<your_gitlab_application_id>
-STUDIO_GITLAB_CLIENT_SECRET=<your_gitlab_secret>
-```
-
-### Personal Access Token (Manual)
-
-When using **Google OAuth** or **Custom Auth** as your Auth provider, you must provide a Personal Access Token (PAT) with repository write permissions:
-
-```bash [.env]
-# For GitHub repositories
-STUDIO_GITHUB_TOKEN=<your_github_personal_access_token>
-
-# For GitLab repositories
-STUDIO_GITLAB_TOKEN=<your_gitlab_personal_access_token>
-```
-
-::warning
-The Personal Access Token must have write permissions to the repository. Without it, users authenticated via Google OAuth or Custom Auth won't be able to publish changes.
 ::
 
 ## Working with Branches
