docs(studio): beta.2 updates
Co-authored-by: Nuxt Studio <noreply@nuxt.studio>

--- a/docs/content/docs/9.studio/5.content.md
+++ b/docs/content/docs/9.studio/5.content.md
@@ -13,7 +13,7 @@ seo:
 
 :br
 
-The beta version now includes the **TipTap visual editor** (default), the **Monaco code editor**, and the new **Form-based editor** for YAML/JSON files and frontmatter. You can switch between them at any time using the editor mode toggle in the toolbar.
+The beta version includes the **TipTap visual editor** (default) with **Vue Component Props Editor**, the **Monaco code editor**, and the **Form-based editor** for YAML/JSON files and frontmatter. You can now visually edit component props and use the new span-style formatting button.
 ::
 
 Nuxt Studio offers a versatile workspace for both developers and content writers, giving them the freedom to choose between our different editors:
@@ -41,6 +41,9 @@ The TipTap visual editor provides a modern Notion-like editing experience for Ma
 
 - **Rich Text Editing** - Format text with headings, bold, italic, strikethrough, code, links, and more
 - **MDC Component Support** - Insert and edit custom Vue components directly in the visual editor
+- **Vue Component Props Editor** - Visually edit component properties through a form-based interface
+- **Data Binding** - Bind component props to frontmatter variables using the [MDC binding syntax](https://content.nuxt.com/docs/files/markdown#binding-data)
+- **Span-style Formatting** - Apply inline text styles using the toolbar button for custom text formatting
 - **Media Integration** - Browse in media picker to insert images from your library
 - **Emoji Integration** - Type `:` followed by an emoji name to insert emojis, or use the slash command `/emoji`
 - **Slash Commands** - Type `/` to access a menu of formatting options and components
@@ -112,7 +115,7 @@ All components in the `/components/content` folder are automatically available:
 1. Type `/` anywhere while editing
 2. Search for your component in the list
 3. Insert and edit component slots directly in the editor
-4. Props editing with visual interface coming in beta
+4. Click on any component to open the **Props Editor** panel and edit properties visually
 ::
 
 #### Integrate External Library Components
@@ -249,4 +252,4 @@ Studio inputs are fully extensible. We can create as many input as we want based
 
 The Monaco code editor provides full control over your content, allowing you to write raw content directly:
 
-MDC syntax for `Markdown` files or  `JSON` or `YAML` syntax for others.
+MDC syntax for `Markdown` files or `JSON` or `YAML` syntax for others.
