--- a/docs/content/docs/9.studio/7.roadmap.md
+++ b/docs/content/docs/9.studio/7.roadmap.md
@@ -14,17 +14,13 @@ This roadmap outlines the development phases of the self-hosted Nuxt Studio modu
 This roadmap is subject to change based on community feedback and evolving priorities. Join the conversation on [GitHub Discussions](https://github.com/nuxt-content/studio/discussions) or [join the Discord](https://discord.gg/sBXDm6e8SP) to help shape the future of Nuxt Studio.
 ::
 
-## Current Status: Beta Release
+## Current Status: Beta Release :badge[v1.0.0-beta.2]  
 
-::badge
-v1.0.0-beta - Current Release
-::
-
-The beta release focuses on core functionality and stability. The beta now includes the TipTap visual editor (default), the Monaco code editor, and the new form-based editor for YAML/JSON files and frontmatter, providing a complete editing experience for all content types with MDC component support.
+The beta release focuses on core functionality and stability. The beta now includes the TipTap visual editor (default), the Monaco code editor, the form-based editor for YAML/JSON files and frontmatter. This provides a complete editing experience for all content types with MDC component support.
 
 ## Release Phases
 
-### ✅ Phase 1 - Alpha
+### ✅ Phase 1 - Beta
 
 **Focus**: Core infrastructure, file operations, and GitHub integration
 
@@ -55,7 +51,7 @@ Live preview of changes on your production website.
 
 #### Internationalization (i18n)
 
-Multi-language support for the Studio interface (16 languages: AR, BG, DE, EN, ES, FA, FI, FR, ID, IT, JA, NL, PL, PT-BR, UA, ZH).
+Multi-language support for the Studio interface (17 languages: AR, BG, DE, EN, ES, FA, FI, FR, ID, IT, JA, NL, NN-NO, NB-NO, PL, PT-BR, UA, ZH, ZH-TW).
 
 #### GitLab Integration
 
@@ -68,29 +64,25 @@ Local development support without authentication.
 #### Google OAuth Authentication
 
 Alternative authentication method for non-GitHub users.
-::
 
-### 🚧 Phase 2 - Beta :badge[Current]
-
-**Focus**: Advanced component management
-
-The beta phase will introduce enhanced component editing capabilities.
-
-::prose-steps{level="4"}
 #### Vue Component Props Editor
 
-Visual interface for editing Vue component properties.
+Visual interface for editing Vue component properties directly in the editor. Select any MDC component and edit its props through a form-based interface.
 
-**Status:** 🚧 In development
+#### Data Binding
 
-#### Custom Oauth
+Support for [MDC binding syntax](https://content.nuxt.com/docs/files/markdown#binding-data) allowing you to bind component props to frontmatter variables for dynamic content.
 
-Provide utilities to allow users to handle their own authentication.
+#### Span-style Text Formatting
 
-**Status:** 🚧 In development
+Toolbar button for applying inline text styles with the span-style feature.
+
+#### Custom Authentication
+
+Utilities (`setStudioUserSession`, `clearStudioUserSession`) to allow users to handle their own authentication flow (password, SSO, LDAP, etc.).
 ::
 
-### 🔮 Phase 3 - Stable Release
+### 🔮 Phase 2 - Stable Release
 
 **Focus**: Production readiness and advanced features
 
