chore(release): studio official release

--- a/docs/content/docs/9.studio/5.content.md
+++ b/docs/content/docs/9.studio/5.content.md
@@ -8,14 +8,6 @@ seo:
   description: Overview of our different Studio CMS editors to manage your content and your medias. Choose between our visual editors and our code editor.
 ---
 
-::note
-**Beta Release - All Editors Now Available!**
-
-:br
-
-The beta version includes the **TipTap visual editor** (default) with **Vue Component Props Editor**, the **Monaco code editor**, and the **Form-based editor** for YAML/JSON files and frontmatter. You can now visually edit component props and use the new span-style formatting button.
-::
-
 Nuxt Studio offers a versatile workspace for both developers and content writers, giving them the freedom to choose between our different editors:
 
 - [Notion-like editor](#notion-like-editor-markdown-files) for `Markdown` files
@@ -205,16 +197,16 @@ export default defineContentConfig({
 Primitive Zod types are automatically mapped to appropriate form inputs in:
 
 - **String** → Text input
-- **Date** → Date picker :badge[Coming Soon]
-- **Number** → Number input :badge[Coming Soon]
-- **Boolean** → Toggle switch :badge[Coming Soon]
-- **Enum** → Select dropdown :badge[Coming Soon]
+- **Date** → Date picker
+- **Number** → Number input
+- **Boolean** → Toggle switch
+- **Enum** → Select dropdown 
 - **Arrays of strings** → List of badge inputs
 - **Arrays of objects** → Accordion of items with embedded form
 
 :video{autoplay controls loop poster="https://res.cloudinary.com/nuxt/video/upload/v1740679550/arrayobjectandstring_r1jpvz.jpg" src="https://res.cloudinary.com/nuxt/video/upload/v1740679550/arrayobjectandstring_r1jpvz.mp4"}
 
-### Custom Inputs Mapping :badge[Coming Soon]
+### Custom Inputs Mapping
 
 Studio goes beyond primitive types. You can customise form fields using the `editor` method, which extends Zod types with metadata to empower editor interface.
 
