--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -1,6 +1,7 @@
 ---
 title: Setup Nuxt Studio
 description: Learn how to install and configure Nuxt Studio to edit your content in production with GitHub authentication.
+links: []
 navigation:
   title: Setup
 seo:
@@ -17,7 +18,7 @@ This documentation covers only the new open-source Nuxt Studio module. Click her
 Install Nuxt Studio using the Nuxt CLI within your project:
 
 ```bash [Terminal]
-npx nuxt module add nuxt-studio@beta
+npx nuxt module add nuxt-studio
 ```
 
 ::tip{icon="i-lucide-rocket"}
