--- a/docs/content/docs/9.studio/7.roadmap.md
+++ b/docs/content/docs/9.studio/7.roadmap.md
@@ -14,13 +14,9 @@ This roadmap outlines the development phases of the self-hosted Nuxt Studio modu
 This roadmap is subject to change based on community feedback and evolving priorities. Join the conversation on [GitHub Discussions](https://github.com/nuxt-content/studio/discussions) or [join the Discord](https://discord.gg/sBXDm6e8SP) to help shape the future of Nuxt Studio.
 ::
 
-## Current Status: Beta Release :badge[v1.0.0-beta.2]
-
-The beta release focuses on core functionality and stability. The beta now includes the TipTap visual editor (default), the Monaco code editor, the form-based editor for YAML/JSON files and frontmatter. This provides a complete editing experience for all content types with MDC component support.
-
 ## Release Phases
 
-### ✅ Phase 1 - Beta
+### ✅ Phase 1 - Stable Release
 
 **Focus**: Core infrastructure, file operations, and GitHub integration
 
@@ -82,15 +78,7 @@ Toolbar button for applying inline text styles with the span-style feature.
 Utilities (`setStudioUserSession`, `clearStudioUserSession`) to allow users to handle their own authentication flow (password, SSO, LDAP, etc.).
 ::
 
-### 🔮 Phase 2 - Stable Release
-
-**Focus**: Production readiness and advanced features
-
-**Target Release**: End of year 2025
-
-The stable release will include performance optimizations and production ready features.
-
-### 🌟 Phase 4 - Advanced Features (Future)
+### 🌟 Phase 2 - Advanced Features (Future)
 
 **Focus**: AI integration, collections view and community based features.
 
