remove studio docs and use nuxt.studio redirection

--- a/docs/content/docs/2.collections/4.validators.md
+++ b/docs/content/docs/2.collections/4.validators.md
@@ -140,6 +140,6 @@ Nuxt Content converts your collection schema to JSON Schema Draft-07 internally.
 
 You can enrich fields for Studio via `property(...).editor({ ... })` with both validators. See the Studio docs for mapping details.
 
-::tip{to="/docs/studio/content"}
+::tip{to="https://nuxt.studio/content#form-editor"}
 Learn how editor metadata maps to form inputs in Studio.
 ::
