--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -17,7 +17,7 @@ Collections organize related items within your project, helping you manage large
 - **Type-safe Queries**: Direct TypeScript integration across all utilities
 - **Automatic Validation**: Ensure data consistency across frontmatter fields and data files (json, yml...)
 - **Advanced Query Builder**: Filter, sort, and paginate your collections with ease
-- **Studio Integration**: Enhanced form generation and optimal editing experience through [Studio](/studio)
+- **Studio Integration**: Enhanced form generation and optimal editing experience through [Studio](https://nuxt.studio)
 
 Learn more about [Content Collections](/docs/collections/define).
 
@@ -42,7 +42,7 @@ The new collections system provides automatic TypeScript types for all your data
 
 ### Nuxt Studio Integration :badge[Soon]{color="neutral"}
 
-[Nuxt Studio](/docs/studio/setup) and v3 are designed to complement each other perfectly. The [studio module](https://github.com/nuxt-content/studio) is creating an ideal environment where developers can focus on code while team members manage content through an intuitive interface.
+[Nuxt Studio](https://nuxt.studio) and v3 are designed to complement each other perfectly. The [studio module](https://github.com/nuxt-content/nuxt-studio) is creating an ideal environment where developers can focus on code while team members manage content through an intuitive interface.
 
 ---
 
