docs: update `stem` examples

--- a/docs/content/docs/3.files/3.json.md
+++ b/docs/content/docs/3.files/3.json.md
@@ -60,7 +60,7 @@ Now we can query authors:
 // Find a single author
 const { data: author } = await useAsyncData('larbish', () => {
   return queryCollection('authors')
-    .where('stem', '=', 'larbish')
+    .where('stem', '=', 'authors/larbish')
     .first()
 })
 
