--- a/docs/content/docs/2.collections/5.inherit-schema-from-component.md
+++ b/docs/content/docs/2.collections/5.inherit-schema-from-component.md
@@ -28,10 +28,10 @@ export default defineContentConfig({
       source: '**/*.md',
       schema: z.object({
         // Reuse props from a local component
-        hero: property(z.object({})).inherit('app/components/HeroSection.vue'),
+        hero: property().inherit('app/components/HeroSection.vue'),
 
         // Reuse props from a dependency (path is resolved like an import)
-        button: property(z.object({})).inherit('@nuxt/ui/components/Button.vue')
+        button: property().inherit('@nuxt/ui/components/Button.vue')
       })
     })
   }
@@ -41,7 +41,6 @@ export default defineContentConfig({
 ## Notes
 
 - The argument to `inherit()` is resolved like a module path. You can pass a relative path from project root or a package path.
-- `inherit()` expects to be used on an object field (e.g., `property(z.object({}))`).
 - Nested usage is supported: you can place inherited objects inside other objects and arrays; Nuxt Content recursively replaces `$content.inherit` markers.
 - If the component cannot be resolved, the schema falls back to the original object definition.
 
