docs: clarify pnpm v10 setup for better-sqlite3

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -71,6 +71,44 @@ If you don't want to install any package, you can use native SQLite from Node.js
 Checkout [`experimental.nativeSqlite` configuration](/docs/getting-started/configuration#experimentalnativesqlite-deprecated-use-sqliteconnector).
 ::
 
+::note{color="warning"}
+If you use **pnpm v10+**, dependency build scripts are not executed by default.
+
+:br
+
+Since `better-sqlite3` and `sqlite3` rely on a postinstall/build step to generate native bindings,
+you may encounter errors such as:
+
+:br
+
+`Could not locate the bindings file`
+
+:br
+
+To resolve this, you can approve the required build scripts by running:
+
+::code-group
+```bash [pnpm]
+pnpm approve-builds
+```
+::
+
+Alternatively, if you need a non-interactive setup (for example in CI),
+you can explicitly allow native builds by adding the following configuration
+to your project root `package.json`:
+
+```json [package.json]
+{
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3",
+      "sqlite3"
+    ]
+  }
+}
+```
+::
+
 ## Create your First Collection
 
 Create a `content.config.ts` file in your project root directory:
