--- a/docs/content/docs/7.integrations/02.llms.md
+++ b/docs/content/docs/7.integrations/02.llms.md
@@ -31,6 +31,27 @@ export default defineNuxtConfig({
 
 That's it 🚀 `/llms.txt` file is automatically generated and pre-rendered.
 
+## Raw markdown access
+
+When `nuxt-llms` is enabled, Nuxt Content also exposes a raw markdown endpoint so you can stream LLM-ready source files without going through the full rendering pipeline.
+
+- **Endpoint**: `/raw/<content-path>.md` (use the same path as the page URL, drop trailing `/index`, and keep the `.md` extension), returning `text/markdown; charset=utf-8`.
+- **Scope**: only `page` collections are included; exclude specific collections with `llms.contentRawMarkdown.excludeCollections`{lang=ts}. Set `llms.contentRawMarkdown = false`{lang=ts} to disable the endpoint entirely.
+- **Output**: if the requested document is missing a top-level heading or description, the route prepends the title and description to the markdown body before returning it.
+- **llms.txt links**: document links generated in `llms.txt` are automatically rewritten to the `/raw/...md` endpoint (unless the collection is excluded or the feature is disabled) so agents fetch compact markdown instead of full HTML, reducing token usage and improving response speed.
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  modules: ['@nuxt/content', 'nuxt-llms'],
+  llms: {
+    contentRawMarkdown: {
+      // Optional: prevent specific page collections from being exposed
+      excludeCollections: ['blog'],
+    },
+  },
+})
+```
+
 ## Sections
 
 When generating content, you can create custom sections to process your content into LLM-friendly formats.
