docs: update llms options

--- a/docs/content/docs/7.integrations/02.llms.md
+++ b/docs/content/docs/7.integrations/02.llms.md
@@ -38,7 +38,7 @@ When `nuxt-llms` is enabled, Nuxt Content also exposes a raw markdown endpoint s
 - **Endpoint**: `/raw/<content-path>.md` (use the same path as the page URL, drop trailing `/index`, and keep the `.md` extension), returning `text/markdown; charset=utf-8`.
 - **Scope**: only `page` collections are included; exclude specific collections with `llms.contentRawMarkdown.excludeCollections`{lang=ts}. Set `llms.contentRawMarkdown = false`{lang=ts} to disable the endpoint entirely.
 - **Output**: if the requested document is missing a top-level heading or description, the route prepends the title and description to the markdown body before returning it.
-- **llms.txt links**: document links generated in `llms.txt` are automatically rewritten to the `/raw/...md` endpoint (unless the collection is excluded or the feature is disabled) so agents fetch compact markdown instead of full HTML, reducing token usage and improving response speed.
+- **llms.txt links**: document links generated in `llms.txt` are automatically rewritten to the `/raw/...md` endpoint (unless the collection is excluded or the feature is disabled) so agents fetch compact markdown instead of full HTML, reducing token usage and improving response speed. Control this with `llms.contentRawMarkdown.rewriteLLMSTxt`{lang=ts} (defaults to `true`).
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -47,6 +47,8 @@ export default defineNuxtConfig({
     contentRawMarkdown: {
       // Optional: prevent specific page collections from being exposed
       excludeCollections: ['blog'],
+      // Optional: keep llms.txt links pointing to rendered pages
+      rewriteLLMSTxt: false,
     },
   },
 })
