docs: aside improvements
Co-authored-by: Nuxt Studio <noreply@nuxt.studio>

--- a/docs/content/docs/2.collections/5.inherit-schema-from-component.md
+++ b/docs/content/docs/2.collections/5.inherit-schema-from-component.md
@@ -1,8 +1,9 @@
 ---
 title: Inherit Schema from a Vue Component
-navigation:
-  title: Inherit from component
 description: Reuse a Vue component's props as part of your collection schema using property().inherit().
+links: []
+navigation:
+  title: Components
 ---
 
 You can reuse a Vue component's props as part of your collection schema. This helps keep your content model aligned with your UI, reduces duplication, and prevents drift.
