--- a/docs/content/docs/7.integrations/01.i18n.md
+++ b/docs/content/docs/7.integrations/01.i18n.md
@@ -1,9 +1,15 @@
 ---
-title: I18n module
+title: Nuxt i18n module
 description: Learn how to create multi-language websites using Nuxt Content with the @nuxtjs/i18n module.
+links: []
+navigation:
+  title: Nuxt i18n
+seo:
+  title: I18n module
+  description: Learn how to create multi-language websites using Nuxt Content with the @nuxtjs/i18n module.
 ---
 
-Nuxt Content integrates with [`@nuxtjs/i18n`](https://i18n.nuxtjs.org/) to create multi-language websites. When both modules are configured together, you can organize content by language and automatically serve the correct content based on the user's locale.
+Nuxt Content integrates with `@nuxtjs/i18n` to create multi-language websites. When both modules are configured together, you can organize content by language and automatically serve the correct content based on the user's locale.
 
 ## Setup
 
@@ -75,7 +81,7 @@ export default defineContentConfig({
 
 Create a catch-all page that fetches content based on the current locale:
 
-```vue [pages/\[...slug\].vue]
+```vue [pages/[...slug\\].vue]
 <script setup lang="ts">
 import { withLeadingSlash } from 'ufo'
 import type { Collections } from '@nuxt/content'
@@ -139,7 +145,7 @@ Each language folder should contain the same structure to ensure content parity 
 
 You can implement a fallback strategy to show content from the default locale when content is missing in the current locale:
 
-```ts [pages/\[...slug\].vue]
+```ts [pages/[...slug\\].vue]
 const { data: page } = await useAsyncData('page-' + slug.value, async () => {
   const collection = ('content_' + locale.value) as keyof Collections
   let content = await queryCollection(collection).path(slug.value).first()
