--- a/docs/content/docs/7.integrations/02.llms.md
+++ b/docs/content/docs/7.integrations/02.llms.md
@@ -1,10 +1,15 @@
 ---
-title: LLMs module 
-description: Learn how to generate AI-ready content files using Nuxt Content and
-  the Nuxt LLMs module.
+title: Nuxt LLMs module
+description: Learn how to generate AI-ready content files using Nuxt Content and the Nuxt LLMs module.
+links: []
+navigation:
+  title: Nuxt LLMs
+seo:
+  title: LLMs module
+  description: Learn how to generate AI-ready content files using Nuxt Content and the Nuxt LLMs module.
 ---
 
-The Nuxt Content module integrates [`nuxt-llms`](https://github.com/nuxtlabs/nuxt-llms) to prepare your content for Large Language Models (LLMs). When `nuxt-llms` is detected, Content module automatically extends the LLMs module and inject collections of type [page](https://content.nuxt.com/docs/collections/types#page-type) to the LLMs module.🚀
+The Nuxt Content module integrates `nuxt-llms` to prepare your content for Large Language Models (LLMs). When `nuxt-llms` is detected, Content module automatically extends the LLMs module and inject collections of type [page](https://content.nuxt.com/docs/collections/types#page-type) to the LLMs module.🚀
 
 ## Setup
 
@@ -36,9 +41,9 @@ That's it 🚀 `/llms.txt` file is automatically generated and pre-rendered.
 When `nuxt-llms` is enabled, Nuxt Content also exposes a raw markdown endpoint so you can stream LLM-ready source files without going through the full rendering pipeline.
 
 - **Endpoint**: `/raw/<content-path>.md` (use the same path as the page URL, drop trailing `/index`, and keep the `.md` extension), returning `text/markdown; charset=utf-8`.
-- **Scope**: only `page` collections are included; exclude specific collections with `llms.contentRawMarkdown.excludeCollections`{lang=ts}. Set `llms.contentRawMarkdown = false`{lang=ts} to disable the endpoint entirely.
+- **Scope**: only `page` collections are included; exclude specific collections with `llms.contentRawMarkdown.excludeCollections`. Set `llms.contentRawMarkdown = false` to disable the endpoint entirely.
 - **Output**: if the requested document is missing a top-level heading or description, the route prepends the title and description to the markdown body before returning it.
-- **llms.txt links**: document links generated in `llms.txt` are automatically rewritten to the `/raw/...md` endpoint (unless the collection is excluded or the feature is disabled) so agents fetch compact markdown instead of full HTML, reducing token usage and improving response speed. Control this with `llms.contentRawMarkdown.rewriteLLMSTxt`{lang=ts} (defaults to `true`).
+- **llms.txt links**: document links generated in `llms.txt` are automatically rewritten to the `/raw/...md` endpoint (unless the collection is excluded or the feature is disabled) so agents fetch compact markdown instead of full HTML, reducing token usage and improving response speed. Control this with `llms.contentRawMarkdown.rewriteLLMSTxt` (defaults to `true`).
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
