--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -134,7 +134,7 @@ Additional parameters that you have defined in your frontmatter block need to be
 
 We created the MDC syntax to supercharge Markdown and give you the ability to integrate Vue components with slots and props inside your Markdown.
 
-::info
+::note
 ---
 to: https://remark-mdc.nuxt.space/#syntax
 ---
