docs(i18n): Handle slug as array in computed property

--- a/docs/content/docs/7.integrations/01.i18n.md
+++ b/docs/content/docs/7.integrations/01.i18n.md
@@ -88,7 +88,7 @@ import type { Collections } from '@nuxt/content'
 
 const route = useRoute()
 const { locale } = useI18n()
-const slug = computed(() => withLeadingSlash(String(route.params.slug)))
+const slug = computed(() => Array.isArray(route.params.slug) ? withLeadingSlash(String(route.params.slug.join('/'))) : withLeadingSlash(String(route.params.slug)))
 
 const { data: page } = await useAsyncData('page-' + slug.value, async () => {
   // Build collection name based on current locale
