--- a/docs/content/docs/4.utils/4.query-collection-search-sections.md
+++ b/docs/content/docs/4.utils/4.query-collection-search-sections.md
@@ -23,7 +23,7 @@ The `queryCollectionSearchSections` utility is available in both Vue and Nitro. 
 ## Type
 
 ```ts
-function queryCollectionSearchSections(collection: keyof Collections, opts?: { ignoredTags?: string[], minHeading?: string, maxHeading?: string }): ChainablePromise<T, Section[]>
+function queryCollectionSearchSections<T extends keyof PageCollections>(collection: T, opts?: { ignoredTags?: string[], minHeading?: string, maxHeading?: string, extraFields?: Array<keyof PageCollections[T]> }): ChainablePromise<T, Section[]>
 
 interface ChainablePromise<T extends keyof PageCollections, R> extends Promise<R> {
   where(field: keyof PageCollections[T] | string, operator: SQLOperator, value?: unknown): ChainablePromise<T, R>
@@ -45,6 +45,7 @@ Generate searchable sections from the specified collection.
     - `ignoredTags`: An array of tag names to ignore when generating sections. Default is an empty array.
     - `minHeading`: Minimum heading level to split on (e.g., `'h2'`). Default is `'h1'`.
     - `maxHeading`: Maximum heading level to split on (e.g., `'h3'`). Default is `'h6'`.
+    - `extraFields`: An array of additional fields from the collection items to include in the section objects.
 - Returns: A Promise that resolves to an array of searchable sections. Each section is an object with the following properties:
   - `id`: A unique identifier for the section.
   - `title`: The title of the section (usually the heading text).
@@ -63,6 +64,7 @@ const { data: surround } = await useAsyncData('foo-surround', () => {
     ignoredTags: ['code'],
     minHeading: 'h2',
     maxHeading: 'h3',
+    extraFields: ['author', 'date'],
   })
 })
 </script>
