docs: add note about SSR when deploying to Amplify

--- a/docs/content/docs/6.deploy/8.aws-amplify.md
+++ b/docs/content/docs/6.deploy/8.aws-amplify.md
@@ -35,6 +35,18 @@ frontend:
         - npm ci
 ```
 
+::warning
+If you are using SSR for content, Nitro defaults the Amplify runtime to Node 20. Since `node:sqlite` requires Node 22+, you need to explicitly set the runtime version in `nuxt.config.ts`:
+
+```ts
+nitro: {
+  awsAmplify: {
+    runtime: 'nodejs22.x',
+  },
+},
+```
+::
+
 ## Option B: Use `sqlite3`
 
 All you need to do is to install `sqlite3` package in your project and go to AWS Amplify dashboard and create a new project using git repository.
