feat: manifest hook

--- a/docs/content/docs/8.advanced/5.hooks.md
+++ b/docs/content/docs/8.advanced/5.hooks.md
@@ -36,6 +36,22 @@ export default defineNuxtConfig({
 })
 ```
 
+
+## `content:manifest`{lang="ts"}
+
+This hook is called after the manifest is generated.
+
+```ts
+export default defineNuxtConfig({
+  hooks: {
+    'content:manifest'(ctx) {
+      // ...
+      // ctx.collections.push(defineCollection())
+    }
+  }
+})
+```
+
 ## Example Usage
 
 ```ts [nuxt.config.ts]
