docs: missing full usage of manifest hook

--- a/docs/content/docs/8.advanced/5.hooks.md
+++ b/docs/content/docs/8.advanced/5.hooks.md
@@ -45,7 +45,7 @@ export default defineNuxtConfig({
   hooks: {
     'content:manifest'(ctx) {
       // ...
-      // ctx.collections.push(defineCollection())
+      // ctx.collections.push(resolveCollection('name', defineCollection()))
     }
   }
 })
